[tool.poetry]
name = "visualize-us"
version = "0.1.0"
description = "Everyone who visits, and consents, is logged and shown on a geographic map"
authors = ["awhipp"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
boto3 = "^1.28.63"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
